@@ -39,12 +39,16 @@
 <p class=error id="status">Scripting is disabled.</p>
 
 <div class=navigation>
-[<a href="../list.html">List</a>]
-[<a href="../../schema-add">Add</a>]
+[List files by <a href="../list/uri.html">URI</a>,
+<a href="../list/pubid.html">Public ID</a>,
+<a href="../list/editor.html">Editor</a>]
+[<a href="../../schema-add">Add file</a>]
+
 [<a href="prop.html">Information</a>
-<a>Edit Information</a>]
-[<a href="cache.dat">Cache (as is)</a>
-<a href="cache.html">Cache (annotated)</a>]
+
+(<a href="propedit.html">Edit</a>)]
+[Cache (<a href="cache.html">annotated</a>, 
+<a href="cache.dat">original</a>)]
 </div>
 
 <script>
