@@ -16,8 +16,10 @@
 </form>
 
 <div class=navigation lang=en>
-[<a href="schema/list.html">List</a>]
-[<a>Add</a>]
+[List files by <a href="schema/uri.html">URI</a>,
+<a href="schema/pubid.html">Public ID</a>,
+<a href="schema/editor.html">Editor</a>]
+[<a href="schema-add">Add file</a>]
 </div>
 
 </body>
